<resources>
    <string name="app_name" translatable="false">GenovaGreen</string>
    <string name="slogan">Aiutaci a rendere Genova ancora più Green!</string>
    <string name="e_questo">E questo dove lo butto? </string>
    <string name="lo_sapevi_che">Lo sapevi che la raccolta differenziata varia in base al comune in cui ci si trova? Cerca un prodotto e scopri in quale bidone va smaltito.</string>
    <string name="genovagreen" translatable="false">GenovaGreen</string>
    <string name="dove_lo_butto">Dove lo Butto?</string>
    <string name="scopri">SCOPRI</string>
    <string name="rifiuti_pericolosi">Rifiuti Pericolosi</string>
    <string name="spedizioni">Spedizioni</string>
    <string name="versione">Versione 1.0</string>
    <string name="home" translatable="false">Home</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="contatti">Contatti</string>
    <string name="navigation_drawer_open" translatable="false"> Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false"> Close navigation drawer</string>
    <string name="lingua">Lingua</string>
    <string name="notifiche">Notifiche</string>
    <string name="logout">Esci</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="button" translatable="false">Button</string>
    <string name="exit">Sei sicuro di voler uscire?</string>
    <string name="RUP_tit">Rifiuti Urbani Pericolosi e Rifiuti Ingombranti</string>
    <string name="rif_pericolisi_descrizione">I rifiuti urbani pericolosi (RUP) rappresentano quella tipologia di rifiuti prodotti dalle utenze domestiche che, contenendo al loro interno un’elevata dose di sostanze pericolose per l’ambiente e per la salute, devono essere raccolti separatamente per consentirne un regolare trattamento e smaltimento presso gli impianti convenzionati.</string>
    <string name="RUP_desc">Tutti i rifiuti urbani pericolosi devono essere conferiti presso i centri di raccolta cittadini.</string>
    <string name="RUP_desc_2">Ecco un breve elenco dei RUP:</string>
    <string name="RUP_desc_3"> &#8226; Barattoli di colore, vernici, colle, solventi \n
    <br>&#8226; Pile esauste (stilo, a bottone) \n</br>
    <br>&#8226; Batterie auto esauste \n</br>
    <br>&#8226; Farmaci scaduti e contenitori con residui di medicinali \n</br>
    <br>&#8226; Cartucce d\'inchiostro e toner \n</br>
    <br>&#8226; Bombolette spray \n</br>
    <br>&#8226; Solventi chimici di uso domestico \n</br>
    <br>&#8226; Antiparassitari, insetticidi, topicidi di uso domestico \n</br>
    <br>&#8226; Olio esausto da cucina \n</br>
    <br>&#8226; Olio esausto da motori \n</br>
    <br>&#8226; Filtri olio \n</br>
    &#8226; Apparecchi elettronici alimentati a batteria di piccole dimensioni </string>
    <string name="RUP_desc4">Sono invece rifiuti ingombranti:</string>
    <string name="RUP_desc_5">&#8226; Elettrodomestici (lavatrici, microonde, frigoriferi, ecc.)
    <br>&#8226; Mobili (armadi, librerie, letti, ecc.) \n</br>
    <br>&#8226; Altri oggetti voluminosi (es. biciclette) \n</br></string>
    <string name="RUP_but">TROVA IL CENTRO DI RACCOLTA
        <br> PI&#217; VICINO A TE </br></string>
    <string name="rec_pass">Inserisci qui la tua email e ti invieremo il link per cambiare la password del tuo account.</string>
    <string name="log">Non hai ancora un account?</string>
    <string name="google_maps_API_key" translatable="false">AIzaSyA8doEtufu_Z52wT-IacLHvjJOOYrfTFrU</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoiZ2Vub3ZhZ3JlZW4iLCJhIjoiY2tuY3kyNWoyMXEyMTJubXF3ZnV6OWRwZiJ9.RDHfP9Qt-y5YKf7QvtzAYA</string>
    <string name="title_activity_pericolosi2" translatable="false">Pericolosi2</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_map" translatable="false">MapActivity</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_spedizioni2" translatable="false">Spedizioni2</string>
    <string name="title_activity_spedizioni3" translatable="false">Spedizioni3</string>
    <string name="title_activity_password" translatable="false">Password</string>
    <string name="title_activity_password2" translatable="false">Password2</string>
    <string name="title_activity_spedizioni4" translatable="false">Spedizioni4</string>
    <string name="title_activity_spedizioni5" translatable="false">Spedizioni5</string>
    <string name="SearchViewButtoHint">Cerca un prodotto</string>
    <string name="infoAssistenza">Assistenza</string>
    <string name="infoCondividi">Condividi</string>
    <string name="infoSeguici">Seguici anche sui Social!</string>
    <string name="versione_app_alpha_1_0">Versione app: Beta 1.2</string>
    <string name="email" translatable="false">&#160;Email</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="accedi">Accedi</string>
    <string name="registrati_ora">Registrati ora!</string>
    <string name="recupera_la_tua_password">Recupera la tua password.</string>
    <string name="annulla">ANNULLA</string>
    <string name="invia">INVIA</string>
    <string name="visualizza_la_mappa_di_tutti_i_centri_di_raccolta_rifiuti_a_genova">Visualizza la mappa di tutti i centri di raccolta rifiuti a Genova:</string>
    <string name="o_cerca_il_centro_di_raccolta_in_base_al_prodotto_che_hai_da_smaltire">O cerca il centro di raccolta in base al prodotto che hai da smaltire:</string>
    <string name="rifiuti_ingombranti">RIFIUTI INGOMBRANTI&#160;</string>
    <string name="pile_e_batterie_esauste">PILE e BATTERIE ESAUSTE&#160;</string>
    <string name="olio_esausto_e_filtri_olio">OLIO ESAUSTO e FILTRI OLIO&#160;</string>
    <string name="farmaci_scaduti_e_contenitori">FARMACI SCADUTI e CONTENITORI&#160;</string>
    <string name="vernici_solventi_e_insetticidi">VERNICI, SOLVENTI e INSETTICIDI&#160;</string>
    <string name="registrazione">REGISTRAZIONE&#160;</string>
    <string name="password" translatable="false">&#160;Password</string>
    <string name="ripeti_password">&#160;Ripeti password</string>
    <string name="conferma">Conferma</string>
    <string name="hai_gi_un_account">Hai già un account?</string>
    <string name="accedi_subito">Accedi subito!</string>
    <string name="partecipa_ad_una_delle_seguenti_spedizioni_di_volontariato">Partecipa ad una delle seguenti spedizioni di volontariato:</string>
    <string name="le_mie_spedizioni">LE MIE SPEDIZIONI</string>
    <string name="le_spedizioni_create_da_te">Le spedizioni create da te:</string>
    <string name="aggiungi_una_nuova_spedizione">Aggiungi una nuova spedizione</string>
    <string name="le_spedizioni_a_cui_parteciperai">Le spedizioni a cui parteciperai:</string>
    <string name="crea_una_spedizione">CREA UNA SPEDIZIONE</string>
    <string name="scegli_un_luogo_sulla_mappa">Scegli un luogo sulla mappa:</string>
    <string name="title_activity_place_selection_plugin" translatable="false">PlaceSelectionPluginActivity</string>
    <string name="title_activity_notify" translatable="false">notifyActivity</string>
    <string name="title_activity_notify2" translatable="false">notifyActivity2</string>
    <string name="channel_name" translatable="false">canale 1</string>
    <string name="channel_description" translatable="false">descrizione canale 1</string>
    <string name="move_map_instruction">Muovi la mappa e seleziona il luogo desiderato</string>
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select a location</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>
    <string name="user_location_permission_explanation">Questa funzione necessita dei permessi di localizzazione per funzionare</string>
    <string name="user_location_permission_not_granted">Non hai i permessi per la localizzazione.</string>
    <string name="segnala">Segnala</string>
    <string name="nessun_prodotto_trovato">Nessun prodotto trovato.</string>
    <string name="popup_impostazioni">Sei sicuro di voler uscire dall\'account?</string>
    <string name="logout_toast">Logout avvenuto con successo.</string>
    <string name="login_successo">Login eseguito con successo.</string>
    <string name="verifica_email">Verifica il tuo indirizzo email.</string>
    <string name="riprova">Riprova.</string>
    <string name="login_storto">Qualcosa è andato storto con il login.</string>
    <string name="no_campi_vuoti">Non ci possono essere campi vuoti.</string>
    <string name="errore_db">Errore database.</string>
    <string name="gps_non_attivo">Questa funzione necessita l\'utilizzo del GPS. Vuoi abilitarlo?</string>
    <string name="si">Si</string>
    <string name="no" translatable="false">No</string>
    <string name="seleziona_un_luogo">Seleziona un luogo</string>
    <string name="email_inviata">Email inviata</string>
    <string name="registrazione_avvenuta">Registrazione avvenuta con successo. Controlla la tua email per la verifica.</string>
    <string name="registrazione_storta">Qualcosa è andato storto con la registrazione.</string>
    <string name="username_in_uso">Username già in uso.</string>
    <string name="pass_confermapass_non_coincidono">Password e Conferma password non corrispondono.</string>
    <string name="pass_min_6_caratteri">La password deve avere almeno 6 caratteri.</string>
    <string name="nessuna_spedizione_trovata">Nessuna spedizione trovata.</string>
    <string name="scegliere_la_posizione">Scegliere la posizione</string>
    <string name="elimina">Elimina</string>
    <string name="non_partecipare">Non partecipare</string>
    <string name="impostare_data">Impostare data:</string>
    <string name="data">data</string>
    <string name="ora">ora</string>
    <string name="breve_descrizione">Breve descrizione:</string>
    <string name="inserisci_qui_una_breve_descrizione_sul_lavoro_da_compiere">Inserisci qui una breve descrizione sul lavoro da compiere.</string>
    <string name="aggiungi">AGGIUNGI</string>
    <string name="organizzatore">Organizzatore:</string>
    <string name="data_e_ora">Data e ora:</string>
    <string name="posizione">Posizione:</string>
    <string name="numero_partecipanti">Numero Partecipanti:</string>
    <string name="indietro">Indietro</string>
    <string name="partecipa">Partecipa</string>
    <string name="impostare_ora">Impostare ora:</string>
    <string name="popup_sped2">Sei sicuro di voler eliminare la spedizione?</string>
    <string name="popup_sped1">Sei sicuro di non voler più partecipare alla spedizione?</string>
    <string name="informazioni">Informazioni</string>
    <string name="title_activity_splash1" translatable="false">SplashActivity1</string>
    <string name="consulta_la_sezione_dedicata"><u>Consulta la sezione dedicata</u></string>
    <string name="title_activity_modify_profile" translatable="false">ModifyProfile</string>
    <string name="modifica_profilo">Modifica profilo</string>
    <string name="invia_mail">Invia mail</string>
    <string name="modifica_password">Modifica password:</string>
    <string name="modifica_nome_utente">Modifica nome utente:</string>
    <string name="scopri_di_piu">SCOPRI DI PIU\'!</string>
    <string name="username" translatable="false">&#160;Username</string>
</resources>