<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/content_main"
            android:icon="@drawable/ic_menu_home3"
            android:title="@string/home"
            android:visible="true" />
        <item
            android:id="@+id/content_butto"
            android:icon="@drawable/ic_menu_butto2"
            android:title="@string/dove_lo_butto" />
        <item
            android:id="@+id/content_pericolosi"
            android:icon="@drawable/ic_menu_pericolosi3"
            android:title="@string/rifiuti_pericolosi" />
        <item
            android:id="@+id/content_spedizioni"
            android:icon="@drawable/ic_menu_spedizioni3"
            android:title="@string/spedizioni" />
    </group>

    <View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="#000"
    tools:layout_editor_absoluteX="-25dp"
    tools:layout_editor_absoluteY="502dp" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/content_impostazioni"
            android:icon="@drawable/ic_menu_impostazioni2"
            android:title="@string/impostazioni" />
        <item
            android:id="@+id/content_informazioni"
            android:icon="@drawable/ic_iconmonstr_info_8"
            android:title="Informazioni" />
    </group>
</menu>