<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login"
    android:background="@drawable/back">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_button"
        android:padding="10dp"
        android:src="@mipmap/logo2_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EmailAddress1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="monospace"
        android:drawableLeft="@drawable/ic_email"
        android:ems="14"
        android:textColorHint="#726a6a"
        android:textStyle="bold"
        android:hint=" Email"
        android:inputType="textEmailAddress"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/Password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/ic_password"
        android:ems="14"
        android:fontFamily="monospace"
        android:hint=" Password"
        android:inputType="textPassword"
        android:textColor="#000"
        android:textColorHint="#726a6a"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/EmailAddress1"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress1" />

    <ImageView
        android:id="@+id/showPassword"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintBottom_toTopOf="@+id/cambiopass"
        app:layout_constraintStart_toEndOf="@+id/Password1"
        app:layout_constraintTop_toTopOf="@+id/Password1"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/cambiopass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="12sp"
        android:text="@string/password_dimenticata"
        android:clickable="true"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:textColor="#ff0000"
        app:layout_constraintEnd_toEndOf="@+id/Password1"
        app:layout_constraintTop_toBottomOf="@+id/Password1"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/accedi"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/custom_button"
        android:text="@string/accedi"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accedi">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/log"
            android:textColor="#000"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Registrati"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registratil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:fontFamily="monospace"
            android:text="@string/registrati_ora"
            android:textColor="#0e8cf1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView20"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="OnClick" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>